--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: WillYouth page
+title: Willyouth Page
 email: weiyew5963@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "https://willyouth.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "willyouth.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
 github_username:  willyouth
 
